added border colors for winner & loser

--- a/index.html
+++ b/index.html
@@ -41,25 +41,23 @@
 
       <div id="choices-container">
         <div class="user-container">
-          <h2 class="userChoice">User's Choice</h2>
+          <h2 class="userChoice">Player</h2>
           <div id="userChoiceImage"></div>
         </div>
         <p class="small-text">VS.</p>
         <div class="computer-container">
-          <h2 class="computerChoice">Computer's Choice</h2>
+          <h2 class="computerChoice">Computer</h2>
           <div id="computerChoiceImage"></div>
         </div>
       </div>
 
-      <div class="scoresContainer">
-        <div class="totals">
-          <p id="whoWinsText"></p>
-          <p class="pageText">Score</p>
-          <div class="scoreText">
-            <p id="userScore">You:</p>
-            <p id="tieScore">Tie:</p>
-            <p id="computerScore">Computer:</p>
-          </div>
+      <div class="scores-container">
+        <p id="who-wins-text"></p>
+        <p class="page-text">Score</p>
+        <div class="score-tally">
+          <p id="user-score">You:</p>
+          <p id="tie-score">Tie:</p>
+          <p id="computer-score">Computer:</p>
         </div>
       </div>
     </div>
