made responsive for mobile

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </div>
       <div class="instructions">
         <h3 class="instructions-link">
-          <a href="instructions.html">How to play</a>
+          <a href="instructions.html" target="_blank">How to play</a>
         </h3>
       </div>
 
