refactor for readability and improved structure

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main-container">
       <h1 class="header">Rock, Paper, Scissors, Lizard, Spock</h1>
       <h2 class="header-text">Choose Your Weapon!</h2>
-      <div id="weapon-images">
+      <div id="weapons">
         <img src="images/rock.png" alt="picture of a rock" id="rock" />
         <img
           src="images/paper.png"
